--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
         android:orientation="vertical" >
 
         <ImageView
+            android:id="@+id/head_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -35,6 +36,7 @@
             android:text="@string/hello_world" />
 
         <LinearLayout
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
