--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,5 +21,6 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="black">#000000</color>
+    <color name="blue">#0000ff</color>
 
 </resources>
