--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,21 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HomeActivity" >
+    
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <!--  -->
 
-    <EditText
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/hello_world" />
+    <include
+        android:id="@+id/layout_title_bar"
+        layout="@layout/tilte_bar" />
 
-</RelativeLayout>
+    <!--include
+      android:id="@+id/layout_progress"
+        layout="@layout/progress" /> --> 
+
+    <ListView
+        android:id="@+id/lv_weibos"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
