--- a/res/layout/wb_item_template.xml
+++ b/res/layout/wb_item_template.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/txt_wb_item_uname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/default_user_name"
                 android:textColor="#424d54"
                 android:textIsSelectable="true"
                 android:textSize="20sp" />
@@ -75,6 +76,7 @@
                 android:id="@+id/txt_wb_item_content"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:autoLink="web"
                 android:textColor="#6b717b"
                 android:textIsSelectable="true"
                 android:textSize="14sp" />
@@ -105,6 +107,7 @@
                 android:id="@+id/txt_wb_item_subcontent"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:autoLink="web"
                 android:textColor="#6b717b"
                 android:textIsSelectable="true"
                 android:textSize="12sp" />
