--- a/res/layout/activity_test.xml
+++ b/res/layout/activity_test.xml
@@ -1,17 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".TestActivity" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/test"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="  " />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="  sdfs" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/img_wb_item_head"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/btn_insert_location_s" />
+
+    <ImageView
+        android:id="@+id/ivt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/v" />
+
+</LinearLayout>
