--- a/res/layout/wb_item_template.xml
+++ b/res/layout/wb_item_template.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/img_wb_item_head"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginTop="5dp"
         android:src="@drawable/usericon" />
 
@@ -147,7 +147,7 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/txt_wb_item_redirect"
+                    android:id="@+id/txt_wb_item_reposed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/redirect_icon"
@@ -156,7 +156,7 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/txt_wb_item_comment"
+                    android:id="@+id/txt_wb_item_comment1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
