--- a/res/layout/activity_write_weibo.xml
+++ b/res/layout/activity_write_weibo.xml
@@ -1,19 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <!--  -->
 
     <include
         android:id="@+id/layout_title_bar"
+        android:layout_weight="1"
         layout="@layout/write_tilte_bar" />
 
-    <!--
-      include
-      android:id="@+id/layout_progress"
-        layout="@layout/progress" />
-    -->
+    <EditText
+        android:id="@+id/et_content"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:gravity="top"
+        android:hint="@string/write_hint"
+        android:inputType="textMultiLine" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/add_image_iv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/btn_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/btn_clear_content_selector"
+            android:text="@string/max_num"
+            android:textColor="#ff3030" />
+    </RelativeLayout>
+
+    <include
+        android:id="@+id/layout_progress"
+        android:layout_weight="1"
+        layout="@layout/write_bottom_title_bar"
+        android:gravity="bottom" />
 
 </LinearLayout>
