--- a/res/layout/activity_write_weibo.xml
+++ b/res/layout/activity_write_weibo.xml
@@ -27,8 +27,8 @@
 
         <ImageView
             android:id="@+id/add_image_iv"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:visibility="gone" />
 
