--- a/res/layout/repost_tilte_bar.xml
+++ b/res/layout/repost_tilte_bar.xml
@@ -6,25 +6,19 @@
     android:paddingRight="5dp" >
 
     <LinearLayout
-        android:id="@+id/write_locate_layout"
+        android:id="@+id/write_back_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left" >
+        android:layout_gravity="left"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp" >
 
         <Button
-            android:id="@+id/btn_writer"
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:background="@drawable/btn_wb_write_selector" />
-
-        <Button
-            android:id="@+id/btn_locate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/btn_locate_selector" />
+            android:background="@drawable/btn_back_selector" />
     </LinearLayout>
 
     <LinearLayout
@@ -39,15 +33,18 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_username"
-            android:textSize="18sp" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="@string/repost_title"
+            android:textSize="15sp" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_refresh"
+        android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:background="@drawable/btn_refresh_selector" />
+        android:background="@drawable/btn_send_weibo_selector"
+        android:text="@string/weibosdk_send" />
 
 </FrameLayout>
