--- a/res/layout/wb_item_template.xml
+++ b/res/layout/wb_item_template.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:id="@+id/img_wb_item_head"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
+        android:scaleType="fitCenter"
         android:src="@drawable/usericon" />
 
     <!-- 右边框架 -->
@@ -35,7 +36,8 @@
                 android:text="@string/default_user_name"
                 android:textColor="#424d54"
                 android:textIsSelectable="true"
-                android:textSize="20sp" />
+                android:textSize="14sp"
+                android:textStyle="" />
 
             <!-- 新浪认证 -->
 
@@ -86,6 +88,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:minHeight="40dp"
+                android:minWidth="40dp"
+                android:scaleType="fitCenter"
                 android:src="@drawable/detail_pic_loading"
                 android:visibility="gone" />
         </LinearLayout>
@@ -117,6 +122,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:minHeight="40dp"
+                android:minWidth="40dp"
+                android:scaleType="fitCenter"
                 android:src="@drawable/detail_pic_loading"
                 android:visibility="gone" />
         </LinearLayout>
