--- a/res/layout/footerview.xml
+++ b/res/layout/footerview.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="50sp"
     android:gravity="center"
     android:orientation="vertical" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/more" />
+        android:text="@string/more" 
+        android:textSize="25sp"/>
 
 </LinearLayout>
