--- a/res/layout/activity_detail.xml
+++ b/res/layout/activity_detail.xml
@@ -2,18 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".DetailActivity" >
 
     <FrameLayout
         android:id="@+id/detail_title_bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/suggestion_title_bg"
-        android:paddingRight="5dp" >
+        android:background="@drawable/suggestion_title_bg" >
 
         <Button
             android:id="@+id/btn_back"
@@ -25,22 +20,21 @@
             android:background="@drawable/btn_back_selector" />
 
         <TextView
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:text="@string/comment_title"
+            android:text="@string/title_detail"
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/btn_send"
+            android:id="@+id/btn_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@drawable/btn_send_weibo_selector"
-            android:text="@string/weibosdk_send" />
+            android:background="@drawable/home_title_selector" />
     </FrameLayout>
 
     <FrameLayout
@@ -52,8 +46,8 @@
 
         <ImageView
             android:id="@+id/user_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="left"
             android:src="@drawable/usericon" />
 
@@ -74,71 +68,192 @@
             android:src="@drawable/triangle" />
     </FrameLayout>
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/about_user"
+        android:background="#F0F0F0" />
     <!-- 微博正文内容 -->
 
-    <LinearLayout
-        android:id="@+id/weibo_text"
-        android:layout_width="match_parent"
+    <ScrollView
+        android:id="@+id/contents"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/about_user"
-        android:orientation="vertical" >
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/item_selector" >
 
-        <!-- 微博正文内容 -->
-
-        <TextView
-            android:id="@+id/txt_wb_item_content"
+        <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:textColor="#6b717b"
-            android:textIsSelectable="true"
-            android:textSize="14sp" />
+            android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/img_wb_item_content_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:minHeight="40dp"
-            android:minWidth="40dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/detail_pic_loading"
-            android:visibility="gone" />
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/weibo_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical" >
 
-    <!-- 微博转发内容 -->
+                <!-- 微博正文内容 -->
+
+                <TextView
+                    android:id="@+id/txt_wb_item_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:autoLink="web"
+                    android:textColor="#6b717b"
+                    android:textIsSelectable="true"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/img_wb_item_content_pic"
+                    android:layout_width="105dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:maxHeight="45dp"
+                    android:maxWidth="45dp"
+                    android:minHeight="40dp"
+                    android:minWidth="40dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/detail_pic_loading"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <!-- 微博转发内容 -->
+
+            <LinearLayout
+                android:id="@+id/lyt_wb_item_sublayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/weibo_text"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/popup"
+                android:orientation="vertical"
+                android:visibility="gone" >
+
+                <!-- 微博正文内容 -->
+
+                <TextView
+                    android:id="@+id/txt_wb_item_subcontent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:autoLink="web"
+                    android:textColor="#6b717b"
+                    android:textIsSelectable="true"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:id="@+id/img_wb_item_content_subpic"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:maxHeight="150dp"
+                    android:maxWidth="90dp"
+                    android:minHeight="40dp"
+                    android:minWidth="40dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/detail_pic_loading"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/repost_comment_bar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lyt_wb_item_sublayout"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal" >
+
+                <Button
+                    android:id="@+id/btn_repost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/title_group_left_bg"
+                    android:drawableLeft="@drawable/toolbar_forward_icon_res"
+                    android:text="@string/redirect_num" />
+
+                <Button
+                    android:id="@+id/btn_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/title_group_right_bg"
+                    android:drawableLeft="@drawable/toolbar_comment_icon_res"
+                    android:text="@string/comment_num" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/repost_comment_bar"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="0" />
+
+                <TextView
+                    android:id="@+id/tv_source"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="0" />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <LinearLayout
-        android:id="@+id/lyt_wb_item_sublayout"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/weibo_text"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/popup"
-        android:orientation="vertical"
-        android:visibility="gone" >
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/maintab_toolbar_bg"
+        android:orientation="horizontal" >
 
-        <!-- 微博正文内容 -->
+        <Button
+            android:id="@+id/to_comment"
+            style="@style/main_tab_bottom"
+            android:drawableTop="@drawable/toolbar_comment_icon_nor"
+            android:text="@string/weibosdk_comment"
+            android:textColor="#0A0A0A" />
 
-        <TextView
-            android:id="@+id/txt_wb_item_subcontent"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:textColor="#6b717b"
-            android:textIsSelectable="true"
-            android:textSize="12sp" />
+        <Button
+            android:id="@+id/to_repost"
+            style="@style/main_tab_bottom"
+            android:drawableTop="@drawable/toolbar_forward_icon_nor"
+            android:text="@string/weibosdk_forward"
+            android:textColor="#0A0A0A" />
 
-        <ImageView
-            android:id="@+id/img_wb_item_content_subpic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:minHeight="40dp"
-            android:minWidth="40dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/detail_pic_loading"
-            android:visibility="gone" />
+        <LinearLayout
+            android:id="@+id/to_fav"
+            style="@style/main_tab_bottom"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/img_fav"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/toolbar_fav_icon_nor" />
+
+            <TextView
+                android:id="@+id/fav_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="@string/weibosdk_fav"
+                android:textColor="#0A0A0A"
+                android:textSize="8sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
