--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
     android:orientation="vertical" >
 
     <!--  -->
@@ -11,13 +10,16 @@
         android:id="@+id/layout_title_bar"
         layout="@layout/tilte_bar" />
 
-    <!--include
+    <!--
+      include
       android:id="@+id/layout_progress"
-        layout="@layout/progress" /> --> 
+        layout="@layout/progress" />
+    -->
 
     <ListView
         android:id="@+id/lv_weibos"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
