--- a/res/layout/user_item_template.xml
+++ b/res/layout/user_item_template.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:descendantFocusability="blocksDescendants"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
@@ -40,13 +41,14 @@
     </LinearLayout>
 
     <Button
+        android:layout_marginTop="15dp"
         android:id="@+id/btn_follow"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center"
         android:background="@drawable/btn_follow_shape"
-        android:focusable="false"
+ 
         android:text="@string/follow"
         android:visibility="gone" />
 
