--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     tools:context=".SearchActivity" >
 
@@ -12,34 +12,44 @@
 
         <LinearLayout
             android:layout_width="271dp"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/search_et_bg"
             android:orientation="horizontal" >
 
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="0dp"
-                android:background="@null"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.71"
+                android:background="@null"
+                android:hint="@string/search_hint"
                 android:singleLine="true"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
-            <ImageButton
-                android:layout_marginLeft="3dp"
+            <Button
                 android:id="@+id/btn_clear"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_delete" />
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="0dp"
+                android:background="@drawable/ic_delete"
+                android:visibility="gone" />
         </LinearLayout>
 
-        <ImageButton
+        <Button
             android:id="@+id/btn_search"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/search_selector" />
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/user_search_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
