--- a/res/layout/user_item_template.xml
+++ b/res/layout/user_item_template.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:descendantFocusability="blocksDescendants"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal" >
 
     <ImageView
@@ -26,7 +26,7 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="asdfssdf"
+            android:text=""
             android:textSize="18sp" />
 
         <TextView
@@ -41,14 +41,13 @@
     </LinearLayout>
 
     <Button
-        android:layout_marginTop="15dp"
         android:id="@+id/btn_follow"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
         android:background="@drawable/btn_follow_shape"
- 
         android:text="@string/follow"
         android:visibility="gone" />
 
